[metadata]
name = napari-microparticle
version = 0.1.0
author = Andrey Misyurev
url = https://github.com/Misyuriy/napari-microparticle
description = "A plugin for powder particle size measurement and morphology analysis in 2D microscopy images."
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari
    numpy
    scikit-image
    scipy
    pathlib
    qtpy
    magicgui
    openpyxl

[options.entry_points]
napari.manifest =
    napari-microparticle = napari_microparticle:napari.yaml
